Fixed submit answer popup alignment issue for CP

--- a/css/multichoice.css
+++ b/css/multichoice.css
@@ -384,8 +384,12 @@
   font-family: Arial, sans-serif;
 }
 
-.h5p-multichoice .h5p-question-buttons.right-align {
+.h5p-element-inner.h5p-multichoice .h5p-question-buttons.right-align {
   width: 100% !important;
+  text-align: right !important;
+}
+.h5p-button-element.h5p-multichoice .h5p-question-buttons.right-align {
+  width: calc(100% - 2em) !important;
   text-align: right !important;
 }
 
